Fri Mar 21 23:49:28 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* snarf.h, backtrace.c: Name change SCM_GLOBAL --> SCM_VCELL.

	* snarf.h: Added new macros SCM_GLOBAL_SYMBOL and SCM_GLOBAL_VCELL
	which defines C variables with global linkage.

Mon Mar 17 05:57:11 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* snarf.h (SCM_PROC1): Bugfix: Use (void) rather than (...) for
	zero arg subrs.

Sun Mar 16 11:43:49 1997  Mikael Djurfeldt  <mdj@floss.cyclic.com>

 	* eval.c (safe_setjmp): Temporarily use old setjmp until someone
 	has time to check why this doesn't work well with continuations.

Sun Mar 16 05:09:55 1997  Jim Blandy  <jimb@totoro.cyclic.com>

	* Fix shell syntax error; some shells won't tolerate 
	multiple "fi" statements on a single line.  (Thanks to Fred Fish.)

Sat Mar 15 01:11:40 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* posix.c (scm_uname): throw an error if uname fails instead
	of returning errno.

	* error.h (scm_errno, scm_perror): obsolete prototypes removed.

	* error.c (err_head, scm_errno, scm_perror): obsolete procedures
	removed.

	* async.c (scm_ints_disabled): definition moved from error.c.

Sat Mar 15 00:06:08 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* acconfig.h: Removed PACKAGE.

	* scmconfig.h.in: Regenerated.

	* snarf.h: g++ says it's non-portable not to specify the first
 	argument in a varargs declaration.  I introduced the first
 	argument by using preprocessor conditionals.

Thu Mar 13 21:28:25 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* ioext.c (scm_read_delimited_x): use RO string macros for delims.
	(scm_freopen): use RO string macros for filename and modes.
	(scm_duplicate_port, scm_fdopen): use RO string macros for modes.

	* posix.c (scm_getgrgid): simplify conversion of name to C string.
	(scm_mknod): use RO string macros for path.

	* socket.c (scm_fill_sockaddr, scm_send, scm_sendto):
	use SCM_ROSTRINGP, SCM_ROCHARS, SCM_ROLENGTH.
	
	* net_db.c (scm_gethost, scm_getnet, scm_getproto, scm_getserv):